Adjust sub-heading spacing, fix message page height, test form, update button color, and resolve FAQ layout overflow

--- a/styles/_message.scss
+++ b/styles/_message.scss
@@ -70,7 +70,7 @@
                         box-shadow: 0px 2px 4px rgba(161, 165, 161, 0.718);
                         text-align: center;
                         margin-top: 1.5em;
-                        background-color: aqua;
+                        background-color: #5CE1E6;
                     }
                 }
             }
